--- a/ael/installer/packages.toml
+++ b/ael/installer/packages.toml
@@ -527,22 +527,19 @@ description      = "Improved dynamic tiling window manager"
 url              = "https://i3wm.org"
 
 [pkg.i3blocks]
-package     = "community/i3blocks"
-description = "Define blocks for your i3bar status line"
-url         = "https://github.com/vivien/i3blocks"
-mode        = ["desktop", "hacker"]
+package          = "community/i3blocks"
+description      = "Define blocks for your i3bar status line"
+url              = "https://github.com/vivien/i3blocks"
 
 [pkg.icedtea-web]
-package     = "extra/icedtea-web"
-description = "Additional components for OpenJDK - Browser plug-in and Web Start implementation"
-url         = "https://github.com/AdoptOpenJDK/IcedTea-Web"
-mode        = ["desktop", "hacker"]
+package          = "extra/icedtea-web"
+description      = "Additional components for OpenJDK - Browser plug-in and Web Start implementation"
+url              = "https://github.com/AdoptOpenJDK/IcedTea-Web"
 
 [pkg.imagemagick]
-package     = "extra/imagemagick"
-description = "An image viewing/manipulation program"
-url         = "https://www.imagemagick.org/"
-mode        = ["desktop", "hacker"]
+package          = "extra/imagemagick"
+description      = "An image viewing/manipulation program"
+url              = "https://www.imagemagick.org/"
 
 [pkg.inetutils]
 ## (* provides *)
@@ -569,32 +566,30 @@ description      = "Professional vector graphics editor"
 url              = "https://inkscape.org/"
 
 [pkg.inxi]
-package     = "aur/inxi-git"
-description = "Full featured CLI system information tool"
-url         = "https://smxi.org/docs/inxi.htm"
-url_aur     = "https://aur.archlinux.org/packages/inxi-git"
-mode        = ["ael-base"]
+package          = "aur/inxi-git"
+description      = "Full featured CLI system information tool"
+url              = "https://smxi.org/docs/inxi.htm"
+url_aur          = "https://aur.archlinux.org/packages/inxi-git"
 
 [pkg.jd-gui]
-package     = "aur/jd-gui-bin"
-description = "A standalone graphical utility that displays Java source codes of .class files"
-url         = "http://jd.benow.ca/"
-aur_url     = "https://aur.archlinux.org/packages/jd-gui-bin"
-mode        = ["testing"]
+package          = "aur/jd-gui-bin"
+description      = "A standalone graphical utility that displays Java source codes of .class files"
+url              = "http://jd.benow.ca/"
+aur_url          = "https://aur.archlinux.org/packages/jd-gui-bin"
 
 [pkg.john]
+## (* provides *)
+## /usr/bin/gpg2john
+## /usr/bin/ssh2john
+## /usr/bin/unshadow
 package          = "community/john"
 description      = "John the Ripper password cracker"
 url              = "https://www.openwall.com/john"
-provide          = ["/usr/bin/gpg2john",
-                    "/usr/bin/ssh2john",
-                    "/usr/bin/unshadow"]
 
 [pkg.jq]
-package     = "community/jq"
-description = "Command-line JSON processor"
-url         = "https://stedolan.github.io/jq/"
-mode        = ["ael-base"]
+package          = "community/jq"
+description      = "Command-line JSON processor"
+url              = "https://stedolan.github.io/jq/"
 
 [pkg.jre-openjdk]
 package          = "extra/jre-openjdk"
@@ -607,16 +602,14 @@ url              = "https://openjdk.java.net/"
 # url              = "https://openjdk.java.net/"
 
 [pkg.jupyter-notebook]
-package     = "community/jupyter-notebook"
-description = "The language-agnostic HTML notebook application for Project Jupyter"
-url         = "https://github.com/jupyter/notebook"
-mode        = ["testing"]
+package          = "community/jupyter-notebook"
+description      = "The language-agnostic HTML notebook application for Project Jupyter"
+url              = "https://github.com/jupyter/notebook"
 
 [pkg.kdenlive]
-package     = "extra/kdenlive"
-description = "A non-linear video editor for Linux using the MLT video framework"
-url         = "https://apps.kde.org/kdenlive/"
-mode        = ["testing"]
+package          = "extra/kdenlive"
+description      = "A non-linear video editor for Linux using the MLT video framework"
+url              = "https://apps.kde.org/kdenlive/"
 
 [pkg.libreoffice]
 package          = "extra/libreoffice-fresh"
@@ -624,182 +617,180 @@ description      = "LibreOffice branch which contains new features and program e
 url              = "https://www.libreoffice.org/"
 
 [pkg.librespeed-cli]
-package     = "aur/librespeed-cli-bin"
-description = "Command line interface for LibreSpeed speed test backends"
-url         = "https://github.com/librespeed/speedtest-cli"
-url_aur     = "https://aur.archlinux.org/packages/librespeed-cli-bin"
-mode        = ["ael-base"]
+package          = "aur/librespeed-cli-bin"
+description      = "Command line interface for LibreSpeed speed test backends"
+url              = "https://github.com/librespeed/speedtest-cli"
+url_aur          = "https://aur.archlinux.org/packages/librespeed-cli-bin"
+
+# [libtool]
+# [libvncserver]
+# [libxcrypt-compat]
 
 [pkg.linux]
-package     = "core/linux"
-description = "The Linux kernel and modules"
-url         = "https://github.com/archlinux/linux/commits/"
-mode        = ["ael-base"]
+package          = "core/linux"
+description      = "The Linux kernel and modules"
+url              = "https://github.com/archlinux/linux/commits/"
 
 [pkg.linux-firmware]
-package     = "core/linux-firmware"
-mode        = ["ael-base"]
+package          = "core/linux-firmware"
 
 [pkg.linux-headers]
-package     = "core/linux-headers"
-mode        = ["ael-base"]
+package          = "core/linux-headers"
+
+# [lshw]
+# [luit]
 
 [pkg.lxappearance]
-package     = "community/lxappearance"
-description = "Feature-rich GTK+ theme switcher of the LXDE Desktop"
-url         = "https://wiki.lxde.org/en/LXAppearance"
-mode        = ["testing"]
+package          = "community/lxappearance"
+description      = "Feature-rich GTK+ theme switcher of the LXDE Desktop"
+url              = "https://wiki.lxde.org/en/LXAppearance"
+
+# [lxc]
 
 [pkg.lynx]
-package     = "extra/lynx"
-description = "A text browser for the World Wide Web"
-url         = "https://lynx.invisible-island.net/"
-mode        = ["ael-base"]
+package          = "extra/lynx"
+description      = "A text browser for the World Wide Web"
+url              = "https://lynx.invisible-island.net/"
 
 [pkg.man-db]
-package     = "core/man-db"
-description = "A utility for reading man pages"
-url         = "https://gitlab.com/cjwatson/man-db"
-provide     = ["/usr/bin/accessdb",
-               "/usr/bin/apropos",
-               "/usr/bin/catman",
-               "/usr/bin/convert-mans",
-               "/usr/bin/lexgrog",
-               "/usr/bin/man",
-               "/usr/bin/man-recode",
-               "/usr/bin/mandb",
-               "/usr/bin/manpath",
-               "/usr/bin/whatis"]
-mode        = ["ael-base"]
-notes       = """
-              * Should we run mandb or is it run during installation?
-              """
+## (* provides *)
+## /usr/bin/accessdb
+## /usr/bin/apropos
+## /usr/bin/catman
+## /usr/bin/convert-mans
+## /usr/bin/lexgrog
+## /usr/bin/man
+## /usr/bin/man-recode
+## /usr/bin/mandb
+## /usr/bin/manpath
+## /usr/bin/whatis
+## (* notes *)
+## * Should we run mandb or is it run during installation?
+package          = "core/man-db"
+description      = "A utility for reading man pages"
+url              = "https://gitlab.com/cjwatson/man-db"
 
 [pkg.man-pages]
-package     = "core/man-pages"
-description = "Linux man pages"
-url         = "https://www.kernel.org/doc/man-pages/"
-mode        = ["ael-base"]
+package          = "core/man-pages"
+description      = "Linux man pages"
+url              = "https://www.kernel.org/doc/man-pages/"
 
-[pkg.mangl]
-package     = "aur/mangl-git"
-description = "graphical man page viewer"
-url         = "https://github.com/zigalenarcic/mangl"
-aur_url     = "https://aur.archlinux.org/packages/mangl-git"
-mode        = ["testing"]
+# [pkg.mangl]
+# package          = "aur/mangl-git"
+# description      = "graphical man page viewer"
+# url              = "https://github.com/zigalenarcic/mangl"
+# aur_url          = "https://aur.archlinux.org/packages/mangl-git"
 
 [pkg.mariadb-clients]
-package     = "extra/mariadb-clients"
-description = "MariaDB client tools"
-url         = "https://mariadb.org/"
-provide     = ["/usr/bin/mariadb",
-               "/usr/bin/mariadb-admin",
-               "/usr/bin/mariadb-binlog",
-               "/usr/bin/mariadb-check",
-               "/usr/bin/mariadb-conv",
-               "/usr/bin/mariadb-dump",
-               "/usr/bin/mariadb-import",
-               "/usr/bin/mariadb-plugin",
-               "/usr/bin/mariadb-show",
-               "/usr/bin/mariadb-slap",
-               "/usr/bin/mariadb-test",
-               "/usr/bin/mariadb-upgrade",
-               "/usr/bin/mysql",
-               "/usr/bin/mysql_plugin",
-               "/usr/bin/mysql_upgrade",
-               "/usr/bin/mysqladmin",
-               "/usr/bin/mysqlbinlog",
-               "/usr/bin/mysqlcheck",
-               "/usr/bin/mysqldump",
-               "/usr/bin/mysqlimport",
-               "/usr/bin/mysqlshow",
-               "/usr/bin/mysqlslap",
-               "/usr/bin/mysqltest"]
-mode        = ["testing"]
+## (* provides *)
+## /usr/bin/mariadb
+## /usr/bin/mariadb-admin
+## /usr/bin/mariadb-binlog
+## /usr/bin/mariadb-check
+## /usr/bin/mariadb-conv
+## /usr/bin/mariadb-dump
+## /usr/bin/mariadb-import
+## /usr/bin/mariadb-plugin
+## /usr/bin/mariadb-show
+## /usr/bin/mariadb-slap
+## /usr/bin/mariadb-test
+## /usr/bin/mariadb-upgrade
+## /usr/bin/mysql
+## /usr/bin/mysql_plugin
+## /usr/bin/mysql_upgrade
+## /usr/bin/mysqladmin
+## /usr/bin/mysqlbinlog
+## /usr/bin/mysqlcheck
+## /usr/bin/mysqldump
+## /usr/bin/mysqlimport
+## /usr/bin/mysqlshow
+## /usr/bin/mysqlslap
+## /usr/bin/mysqltest
+package          = "extra/mariadb-clients"
+description      = "MariaDB client tools"
+url              = "https://mariadb.org/"
 
 [pkg.meld]
-package     = "extra/meld"
-description = "Compare files, directories and working copies"
-url         = "https://meldmerge.org/"
-mode        = ["desktop", "hacker"]
+package          = "extra/meld"
+description      = "Compare files, directories and working copies"
+url              = "https://meldmerge.org/"
 
 [pkg.metasploit]
+## (* provides *)
+## /usr/bin/msfconsole
+## /usr/bin/msfvenom
 package          = "community/metasploit"
 description      = "Advanced open-source platform for developing, testing, and using exploit code."
 url              = "https://www.metasploit.com/"
-provide          = ["/usr/bin/msfconsole",
-                    "/usr/bin/msfvenom"]
 
 [pkg.mlocate]
-package     = "core/mlocate"
-description = "Merging locate/updatedb implementation"
-url         = "https://pagure.io/mlocate"
-provide     = ["/usr/bin/locate",
-               "/usr/bin/slocate",
-               "/usr/bin/updatedb"]
-mode        = ["ael-base"]
+## (* provides *)
+## /usr/bin/locate
+## /usr/bin/slocate
+## /usr/bin/updatedb
+package          = "core/mlocate"
+description      = "Merging locate/updatedb implementation"
+url              = "https://pagure.io/mlocate"
 
 [pkg.mpv]
-package     = "community/mpv"
-description = "a free, open source, and cross-platform media player"
-url         = "https://mpv.io/"
-mode        = ['Desktop']
+package          = "community/mpv"
+description      = "a free, open source, and cross-platform media player"
+url              = "https://mpv.io/"
 
 [pkg.mtools]
-package     = "extra/mtools"
-description = "A collection of utilities to access MS-DOS disks"
-url         = "https://www.gnu.org/software/mtools/"
-provide     = ["/usr/bin/mlabel"]
-mode        = ["testing"]
+## (* provides *)
+## /usr/bin/mlabel
+package          = "extra/mtools"
+description      = "A collection of utilities to access MS-DOS disks"
+url              = "https://www.gnu.org/software/mtools/"
 
 [pkg.mtr]
-package     = "extra/mtr"
-description = "Combines the functionality of traceroute and ping into one tool (CLI version)"
-url         = "https://www.bitwizard.nl/mtr/"
-mode        = ["ael-base"]
+package          = "extra/mtr"
+description      = "Combines the functionality of traceroute and ping into one tool (CLI version)"
+url              = "https://www.bitwizard.nl/mtr/"
 
 [pkg.neofetch]
-package     = "community/neofetch"
-description = "A CLI system information tool written in BASH that supports displaying images."
-url         = "https://github.com/dylanaraps/neofetch"
-mode        = ["ael-base"]
+package          = "community/neofetch"
+description      = "A CLI system information tool written in BASH that supports displaying images."
+url              = "https://github.com/dylanaraps/neofetch"
 
 [pkg.net-tools]
-package     = "core/net-tools"
-description = "Configuration tools for Linux networking"
-url         = "http://net-tools.sourceforge.net/"
-category    = ["cli", "networking"]
-provide     = ["/usr/bin/arp",
-               "/usr/bin/ifconfig",
-               "/usr/bin/ipmaddr",
-               "/usr/bin/iptunnel",
-               "/usr/bin/mii-tool",
-               "/usr/bin/nameif",
-               "/usr/bin/netstat",
-               "/usr/bin/plipconfig",
-               "/usr/bin/rarp",
-               "/usr/bin/route",
-               "/usr/bin/slattach"]
-mode        = ["ael-base"]
+## (* provides *)
+## /usr/bin/arp
+## /usr/bin/ifconfig
+## /usr/bin/ipmaddr
+## /usr/bin/iptunnel
+## /usr/bin/mii-tool
+## /usr/bin/nameif
+## /usr/bin/netstat
+## /usr/bin/plipconfig
+## /usr/bin/rarp
+## /usr/bin/route
+## /usr/bin/slattach
+package          = "core/net-tools"
+description      = "Configuration tools for Linux networking"
+url              = "http://net-tools.sourceforge.net/"
 
 [pkg.netcat]
+## (* provides *)
+## /usr/bin/nc
+## /usr/bin/netcat
 package          = "extra/gnu-netcat"
 description      = "GNU rewrite of netcat, the network piping application."
 url              = "http://netcat.sourceforge.net/"
-provide          = ["/usr/bin/nc",
-                    "/usr/bin/netcat"]
 
 [pkg.networkmanager]
+## (* provides *)
+## /usr/bin/NetworkManager
+## /usr/bin/nm-online
+## /usr/bin/nmcli
+## /usr/bin/nmtui
+## /usr/bin/nmtui-connect
+## /usr/bin/nmtui-edit
+## /usr/bin/nmtui-hostname
 package          = "extra/networkmanager"
 description      = "Network connection manager and user applications"
 url              = "https://networkmanager.dev/"
-provide          = ["/usr/bin/NetworkManager",
-                    "/usr/bin/nm-online",
-                    "/usr/bin/nmcli",
-                    "/usr/bin/nmtui",
-                    "/usr/bin/nmtui-connect",
-                    "/usr/bin/nmtui-edit",
-                    "/usr/bin/nmtui-hostname"]
 
 [pkg.network-manager-applet]
 package          = "extra/network-manager-applet"
@@ -807,38 +798,33 @@ description      = "Applet for managing network connections"
 url              = "https://gitlab.gnome.org/GNOME/network-manager-applet"
 
 [pkg.nfs-utils]
-package     = "core/nfs-utils"
-description = "Support programs for Network File Systems"
-url         = "http://nfs.sourceforge.net"
-mode        = ["testing"]
+package          = "core/nfs-utils"
+description      = "Support programs for Network File Systems"
+url              = "http://nfs.sourceforge.net"
 
 [pkg.nginx]
-package     = "extra/nginx"
-description = "Lightweight HTTP server and IMAP/POP3 proxy server"
-url         = "https://nginx.org"
-mode        = ["server"]
+package          = "extra/nginx"
+description      = "Lightweight HTTP server and IMAP/POP3 proxy server"
+url              = "https://nginx.org"
 
 [pkg.nikto]
-package     = "community/nikto"
-description = "A web server scanner which performs comprehensive tests against web servers for multiple items"
-url         = "https://github.com/sullo/nikto"
-mode        = ["hacker"]
+package          = "community/nikto"
+description      = "A web server scanner which performs comprehensive tests against web servers for multiple items"
+url              = "https://github.com/sullo/nikto"
 
 [pkg.nitrogen]
-package     = "extra/nitrogen"
-description = "Background browser and setter for X windows"
-url         = "http://projects.l3ib.org/nitrogen/"
-mode        = ["desktop", "hacker"]
+package          = "extra/nitrogen"
+description      = "Background browser and setter for X windows"
+url              = "http://projects.l3ib.org/nitrogen/"
 
 [pkg.nmap]
+## (* provides *)
+## /usr/bin/ncat
+## /usr/bin/nmap
+## /usr/bin/nping
 package     = "extra/nmap"
 description = "Utility for network discovery and security auditing"
 url         = "https://nmap.org/"
-provide     = ["/usr/bin/ncat",
-               "/usr/bin/nmap",
-               "/usr/bin/nping"]
-categories  = ["cli", "networking"]
-mode        = ["ael-base"]
 
 [pkg.nmon]
 package     = "community/nmon"
